# custom-scripts

./: .gitignore  README  analyse_logs.py  setup.cfg  setup.py
android/: get_light_sensor.py  start_sl4a_server.sh
fusioninventory/: test_get_agents_for_computers.php
fusioninventory/install_from_source/: README.asc  fusioninventory_source_install.sh  install_env.sh.template
heartbeat/: check_heartbeat_interfaces.sh
kiniou_scripts/asciidoc/: inoticoming_asciidoc.py
libvirt/: connect_spicy_guest.py
linux/: vgaswitcheroo.sh
mirror_vbs/: mirror.vbs
mysql/: README.asciidoc  backup_mysql.sh  execute_mysql  my-local.cnf.sample  mysql_backup  mysql_backup.sh  mysql_execute  mysql_load.sh  run_mysql_ci.sh
tmux/: get_pids.sh
uwsgi/: watch_code_change.py
