[metadata]
name = kiniou_scripts
author = Kevin Roy
author-email = kiniou@gmail.org
summary = Some random scripts i use a lot
description-file = README
license = GPL-3

[files]
packages=
    kiniou_scripts

[entry_points]
console_scripts =
    inoticoming-asciidoc = kiniou_scripts.asciidoc.inoticoming_asciidoc:main
